Bunch of assignment fixes for 2022 and add Day 6 notes

--- a/src/bna/2022/day/5.md
+++ b/src/bna/2022/day/5.md
@@ -1,7 +1,7 @@
 ---
 layout: layouts/class.njk
 date: 2022-04-11
-title: Git Finale & Daily Stand-ups
+title: Git Finale
 daynum: 5
 coursedate: "April 11, 2022"
 tags:
@@ -9,13 +9,6 @@ tags:
 ---
 
 
-## Git Finale
-
 Today we'll take some time to review any questions from [Assignment 3 - Version Control with Git](../../assignments/3/).
 
 We'll then wrap up our introduction to [team Collaboration with Git](../../topics/team_collab_with_git/) by diving into branches, merging code, and various snags you'll inevitably encounter when using version control (yes, I mean merge conflicts, among other annoyances).
-
-
-## Daily Stand-ups
-
-Git and GitHub provide technical solutions to help teams work better. [Daily stand-ups](../../topics/daily_standup/) are a workflow practice that help teams *communicate* better. Today we'll briefly learn how a daily "stand-up", or scrum, can help us fire on all cylinders as a team and practice the technique as a group.  Each team will set up a scrum schedule and begin applying this workflow on a regular basis.
