--- a/src/bna/2022/assignments/3.md
+++ b/src/bna/2022/assignments/3.md
@@ -1,19 +1,12 @@
 ---
 layout: layouts/assignments.njk
-title: Version control with Git
-date: 2022-04-11
+title: SMART Roadmap
+date: 2022-04-06
 number: 3
 tags:
   - assignments2022
 
 ---
 
-For this assignment, you must answer a variety of questions designed to help you understand key concepts about version control and git, and gain familiarity with a subset of git syntax useful for day-to-day work and team collaboration.
 
-To complete this assignment, each team should:
-
-* Make a copy of this [Google document][]
-* Carefully read the instructions and work through the questions
-* Submit a copy of your completed assignment through Canvas
-
-[Google document]: https://docs.google.com/document/d/1MHYUXdM6Wn8rkTcQWAkzs11CigJSufmtSxyMWPIYcmk/edit?usp=sharing
+{% include "bna/" + year + "/assignments/smart-roadmap.md" %}
