--- a/src/bna/2022/day/10.md
+++ b/src/bna/2022/day/10.md
@@ -13,7 +13,7 @@ tags:
 
 ## Overview
 
-Interactivey storytelling on the web requires thinking about visual presentation
+Interactive storytelling on the web requires thinking about visual presentation
 and design on multiple levels. The big picture concerns include:
 
 - Overall **site layout and design** should invite users into the story while
@@ -27,16 +27,16 @@ These design challenges require a clear understanding of the story. They also re
 
 We have to ask some critical questions as we craft our overall site design, graphics and narrative.
 
-- What **key ideas** or themes have we discovered in the data?
-- What **other interesting angles** of the story can I tell based on the data?
-- What aspects of the story are most conducive to visual storytelling?
-- If a data source doesn't allow us to explore a certain story angle, is it possible to supplement the data in some way to enable that aspect of the story?
+- What *key ideas* or themes have we discovered in the data?
+- What *other interesting angles* of the story can I tell based on the data?
+- What aspects of the story are most conducive to *visual storytelling*?
+- If a data source doesn't allow us to explore a certain story angle, *is it possible to supplement the data* in some way to enable that aspect of the story?
 
-When we first began this quarter, we sketched out our beats, potential story ideas and user features and then set out to find data sources that would help us tell those stories and build those features.
+Early in the quarter we sketched out [beats, potential story ideas and user features](../../topics/beats_and_user_stories/) and then set out to find data sources that would help us tell those stories and build those features.
 
-At this point in the quarter, you should have a good feel for your data sources, and what is -- or is not -- possible. You may have realized in the course of your data exploration that certain angles, user stories and site features are not possible due to the limitations of the  of the data. Meanwhile, other angles, features, etc. are possible using the data, or perhaps with some reasonable amount of additional data gathering and wrangling.
+At this point in the quarter, you should have a good feel for your data sources, and what is -- or is not -- possible. You may have realized in the course of your data exploration that certain angles, user stories and site features are not possible due to the limitations of the  of the data. But other angles, features, etc. are indeed possible using the data, or perhaps with some reasonable amount of additional data gathering and wrangling.
 
-Armed with this nunanced understanding of our story and data stories, we'll begin sketching out the initial designs for our news apps.
+Armed with this understanding of our story and data, we'll begin sketching out the initial designs for our news apps.
 
 ## Group Exercise
 
@@ -48,7 +48,7 @@ For example, perhaps your site has a landing page broadly outlining the story an
 
 Or perhaps your site design focuses on a "scrollytelling" experience that blends narrative, graphics and multimedia.
 
-Whatever the end goal, working through this visual design process will help us plan out and prioritize future work, and make tough choices about which features will get left on the cutting room floor.
+Whatever the end goal, working through this visual design process will help us plan out and prioritize future work. It will also help us make tough choices about which features to leave on the cutting room floor.
 
 ## Assignments
 
