--- a/src/bna/2022/day/10.md
+++ b/src/bna/2022/day/10.md
@@ -34,7 +34,7 @@ We have to ask some critical questions as we craft our overall site design, grap
 
 Early in the quarter we sketched out [beats, potential story ideas and user features](../../topics/beats_and_user_stories/) and then set out to find data sources that would help us tell those stories and build those features.
 
-At this point in the quarter, you should have a good feel for your data sources, and what is -- or is not -- possible. You may have realized in the course of your data exploration that certain angles, user stories and site features are not possible due to the limitations of the  of the data. But other angles, features, etc. are indeed possible using the data, or perhaps with some reasonable amount of additional data gathering and wrangling.
+At this point in the quarter, you should have a good feel for your data sources, and what is -- or is not -- possible. You may have realized in the course of your data exploration that certain angles, user stories and site features are not possible due to the limitations of the data. But other angles, features, etc. are indeed possible, perhaps with some reasonable amount of additional data gathering and wrangling.
 
 Armed with this understanding of our story and data, we'll begin sketching out the initial designs for our news apps.
 
