Update day 14 to focus on Getting on the Web

--- a/src/bna/2022/day/14.md
+++ b/src/bna/2022/day/14.md
@@ -1,7 +1,7 @@
 ---
 layout: layouts/class.njk
 date: 2022-05-11
-title: Integrating team code
+title: Getting on the Web
 daynum: 14
 coursedate: "May 11, 2022"
 tags:
@@ -10,8 +10,10 @@ tags:
 
 ## Overview
 
-Today, we'll create a single git repository to serve as the final home for our projects and begin integrating our work. We'll put into practice the git skills we practiced [last class](../13/), and go through a few rounds of the standard workflow:
+Today, we'll review various ways to [get your projects on the web](../../topics/getting_on_the_web/). After this high-level overview, we'll walk through the process of creating a new GitHub organization to host our team project site on [GitHub Pages](https://pages.github.com/).
+
+We'll then begin integrating our work on this new site. Along the way, we'll put into practice the git skills we practiced [last class](../13/), and go through a few rounds of the standard workflow:
 
 - Pushing work to branches
 - Creating and approving Pull Requests
-- Merging our teammates' code into our active local branches.
+- Merging our teammates' code into our active local branches
