Tweak week 3 and add assignments

--- a/src/bna/2023/day/5.md
+++ b/src/bna/2023/day/5.md
@@ -13,7 +13,7 @@ tags:
 Today we'll take some time to review any questions from [Assignment 4 - Version Control with Git](../../assignments/4/).
 
 We'll step back to better understand the recommended approaches for _how
-to work_ with GitHub, both as a team as well as a sensible daily workflow.
+to work_ with GitHub, both as a team as well as a sensible individual daily workflow.
 
 We'll then wrap up our introduction to [team Collaboration with Git](../../topics/team_collab_with_git/) by diving into branches, merging code, and various snags you'll inevitably encounter when using version control (yes, I mean merge conflicts, among other annoyances).
 
@@ -31,8 +31,7 @@ websites, with a focus on:
 - The features each page will have, along with site-wide features such as navigation
 - How users will interact with your site
 
-> Important: This design brainstorming should be directly informated by
-> your team's [user stories](../../topics/beats_and_user_stories/)
+> Important: Designs should *clearly* address your team's [user stories](../../topics/beats_and_user_stories/)
 
 
 [wireframing]: https://en.wikipedia.org/wiki/Website_wireframe
