Fixup Week 3 class notes

--- a/src/bna/2023/day/5.md
+++ b/src/bna/2023/day/5.md
@@ -20,12 +20,9 @@ We'll then wrap up our introduction to [team Collaboration with Git](../../topic
 
 ## Project Design - Take 1
 
-We'll also take some time to review basic design principles, and begin
-[wireframing][] our projects. This is the first of several design
-check-ins we'll be conducting throughout the quarter.
+We'll also take some time to review basic design principles, and begin [wireframing][] our projects. This is the first of several design check-ins we'll be conducting throughout the quarter.
 
-The overriding goal will be to think the overall layout of your
-websites, with a focus on:
+The overriding goal will be to think the overall layout of your websites, with a focus on:
 
 - Identifying important page types (home page, child pages, etc)
 - The features each page will have, along with site-wide features such as navigation
