--- a/src/bna/2023/day/6.md
+++ b/src/bna/2023/day/6.md
@@ -18,4 +18,4 @@ Daily stand-ups, or scrum, enable frequent communication about the status of wor
 
 But it's also helpful to draft a roadmap of the [milestones](../../topics/milestones/) we plan to accomplish on a longer timeline. Having a series of mid-way markers can help us think through multiple aspects of our work and devise a rough plan for what to build, and when to build it.
 
-Today we'll review how Big Local News uses GitHub milestones to plan some of its work, and then apply a similar methodology to our own team projects.
+Today we'll review how to use GitHub milestones to plan future work and apply the methodology to our team projects.
