--- a/src/bna/2023/day/5.md
+++ b/src/bna/2023/day/5.md
@@ -22,10 +22,10 @@ We'll then wrap up our introduction to [team Collaboration with Git](../../topic
 
 We'll also take some time to review basic design principles, and begin [wireframing][] our projects. This is the first of several design check-ins we'll be conducting throughout the quarter.
 
-The overriding goal will be to think the overall layout of your websites, with a focus on:
+The goal is to begin sketching out the overall layout of your websites, with a focus on:
 
 - Identifying important page types (home page, child pages, etc)
-- The features each page will have, along with site-wide features such as navigation
+- The features each page will have, along with site-wide elements such as navigation
 - How users will interact with your site
 
 > Important: Designs should *clearly* address your team's [user stories](../../topics/beats_and_user_stories/)
