Update day 8 and add assigns 7 and 8

--- a/src/bna/2023/day/8.md
+++ b/src/bna/2023/day/8.md
@@ -12,6 +12,7 @@ tags:
 
 Today we'll review how [browser developer tools can serve as a dashboard](../../topics/coding_cockpit/) for gaining visibility into our code. We'll also try to get a better feel for how to use Javascript to *dynamically* modify a web page after it has loaded in the browser (i.e. manipulating the DOM).
 
-## Assignment 7 - JS Tinkering
+## Assignments
 
-* [Assignment 7 - Javascript Tinkering](../../assignments/7/)
+* [Assignment 7 - DOM and Browser Tools](../../assignments/7/)
+* [Assignment 8 - Javascript Tinkering](../../assignments/8/)
