Remove milestones from earlier days and add day 9

--- a/src/bna/2023/day/7.md
+++ b/src/bna/2023/day/7.md
@@ -1,7 +1,7 @@
 ---
 layout: layouts/class.njk
 date: 2023-04-24
-title: Wireframes Review and Project Planning with Milestones
+title: Wireframes Review
 daynum: 7
 coursedate: "April 24, 2023"
 tags:
@@ -23,11 +23,3 @@ Your wireframes should feature the following elements:
 
 [wireframes]: https://en.wikipedia.org/wiki/Website_wireframe
 
-
-## Project Planning with Milestones
-
-Daily stand-ups, or scrum, enable frequent communication about the status of work during a short period of time known as a "sprint".
-
-But it's also helpful to draft a roadmap of the [milestones](../../topics/milestones/) we plan to accomplish on a longer timeline. Having a series of mid-way markers can help us think through multiple aspects of our work and devise a rough plan for what to build, and when to build it.
-
-Today we'll review how to use GitHub milestones to plan future work and apply the methodology to our team projects.
