Unpublish days 1 and 2

--- a/src/bna/2024/day/1.md
+++ b/src/bna/2024/day/1.md
@@ -5,7 +5,7 @@ title: Course Intro
 daynum: 1
 coursedate: "January 8, 2024"
 tags:
-  - classnotes2024
+  - classnotes202X
 ---
 
 * [Building News Apps course overview][]
