--- a/src/bna/2024/day/2.md
+++ b/src/bna/2024/day/2.md
@@ -5,7 +5,7 @@ title: Project Beats and User Stories
 daynum: 2
 coursedate: "January 10, 2024"
 tags:
-  - classnotes2024
+  - classnotes202X
 ---
 
 * Favorite news app presentations
