--- a/src/bna/2024/assignments/2.md
+++ b/src/bna/2024/assignments/2.md
@@ -1,10 +1,10 @@
 ---
 layout: layouts/assignments.njk
 title: Project bootstrap and User-centric Project Ideas
-date: 2023-04-05
+date: 2024-01-10
 number: 2
 tags:
-  - assignments202X
+  - assignments2024
 
 ---
 
