--- a/src/bna/2024/day/1.md
+++ b/src/bna/2024/day/1.md
@@ -5,13 +5,14 @@ title: Course Intro
 daynum: 1
 coursedate: "January 8, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
-* [Building News Apps course overview][]
+* [Course Overview slides][]
+* [News Apps Overview](../../topics/news_apps_overview/)
 * [Syllabus]({{ syllabus }}) overview and questions
 * [How to succeed in this course](../../topics/how_to_succeed/)
 * Form teams and start brainstorming possible [beats and project ideas](../../topics/beats_and_user_stories/)
 * [Assignment 1](../../assignments/1/)
 
-[Building News Apps course overview]: https://docs.google.com/presentation/d/1o_GDm_ZqwACdCEjGfWKc561wzeM8oHeHjjD6H3NO9Qo/edit?usp=sharing
+[Course Overview slides]: https://docs.google.com/presentation/d/1do22QSsyV4pb7BDUnkYQOQpziUrcvC_Q4-oyToq2oyk/edit?usp=sharing
