--- a/src/bna/2024/day/2.md
+++ b/src/bna/2024/day/2.md
@@ -16,8 +16,5 @@ tags:
 * Setting up and using GitHub project boards
 * Presentations on project beat ideas
 * Overview of [Project Beats and User stories](../../topics/beats_and_user_stories/). From beats to user stories to software features.
-* Overview of the [SMART Roadmap](../../topics/smart_roadmap/), a strategy for crafting individual learning goals that align with and help drive forward our team projects. At the outset, we'll focus primarly on the types of technical skills we hope to learn this quarter.  As our project ideas come into sharper focus, we'll revisit and refine our SMART goals to ensure our inidividual learning plans are aligned with the goals of our team.
-* [Assignment 2](../../assignments/2/):
-  * Project Beats and User Stories
-  * SMART Roadmap
-
+* If time allows we'll do a preview of the [SMART Roadmap](../../topics/smart_roadmap/), a strategy for crafting individual learning goals that align with and help drive forward our team projects. At the outset, we'll focus primarly on the types of technical skills we hope to learn this quarter.  As our project ideas come into sharper focus, we'll revisit and refine our SMART goals to ensure our inidividual learning plans are aligned with the goals of our team.
+* [Assignment 2 - Project Beats and User Stories](../../assignments/2/):
