--- a/src/bna/2024/assignments/3.md
+++ b/src/bna/2024/assignments/3.md
@@ -1,10 +1,10 @@
 ---
 layout: layouts/assignments.njk
 title: SMART Roadmap
-date: 2023-04-12
+date: 2024-01-17
 number: 3
 tags:
-  - assignments202X
+  - assignments2024
 
 ---
 
