--- a/src/bna/2024/day/3.md
+++ b/src/bna/2024/day/3.md
@@ -1,11 +1,11 @@
 ---
 layout: layouts/class.njk
-date: 2023-04-10
-title: Project Presentations and SMART Roadmap Review
+date: 2024-01-17
+title: Project Presentations and SMART Roadmap Overview
 daynum: 3
-coursedate: "April 10, 2023"
+coursedate: "January 17, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
 
@@ -20,10 +20,8 @@ Each team should present on the following:
 * General software ideas to address the needs identified in user stories
 * What role each team member plans to play
 
-## SMART Roadmap feedback
+## SMART Roadmap Overview
 
-If time allows and folks are ready, we'll also present the first draft of our [Smart Roadmaps](../../topics/smart_roadmap/). Here again, this is a chance to
-get some initial feedback and lay out a concrete plan of study for the next few weeks, one that challenges you to learn new skills while contributing to your team's broader goals.
+If time allows, we'll review [SMART Roadmaps](../../topics/smart_roadmap/) and begin designing our individual learning plans. The goal is to lay out a concrete plan of study for the next few weeks, one that challenges you to learn new skills while contributing to your team's broader goals.
 
 Once we have a solid plan, we'll flesh out our first weekly "learning" sprint on the team Project Board, as detailed in [GitHubify your Action Plan](../../topics/smart_roadmap/#githubify-your-action-plan).
-
