--- a/src/bna/2024/assignments/4.md
+++ b/src/bna/2024/assignments/4.md
@@ -1,10 +1,10 @@
 ---
 layout: layouts/assignments.njk
 title: Version control with Git
-date: 2023-04-17
+date: 2024-01-24
 number: 4
 tags:
-  - assignments202X
+  - assignments2024
 
 ---
 
