--- a/src/bna/2024/assignments/5.md
+++ b/src/bna/2024/assignments/5.md
@@ -1,10 +1,10 @@
 ---
 layout: layouts/assignments.njk
 title: Design Reading
-date: 2023-04-17
+date: 2024-01-29
 number: 5
 tags:
-  - assignments202X
+  - assignments2024
 
 ---
 
