--- a/src/bna/2024/day/4.md
+++ b/src/bna/2024/day/4.md
@@ -1,34 +1,27 @@
 ---
 layout: layouts/class.njk
-date: 2023-04-12
-title: SMART Roadmap, Pro Tips for Learning Code & Version Control with Git
+date: 2024-01-17
+title: Project Presentations and SMART Roadmap Overview
 daynum: 4
-coursedate: "April 12, 2023"
+coursedate: "January 17, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
 
-## SMART Roadmap feedback
+## Team project presentations
 
-We'll kick off class by presenting the first drafts of our [Smart Roadmaps](../../topics/smart_roadmap/). This is a chance to
-get some initial feedback and lay out a concrete plan of study for the next few weeks, one that challenges you to learn new skills while contributing to your team's broader goals.
+Today, each team will present their project beats, user stories and initial ideas for software. This is an opportunity to refine ideas and user stories based on feedback from classmates. In addition, it's a chance for you to begin articulating the role each team member will play on the project.
+
+Each team should present on the following:
+
+* Project beat(s)
+* User stories
+* General software ideas to address the needs identified in user stories
+* What role each team member plans to play
+
+## SMART Roadmap Overview
+
+If time allows, we'll review [SMART Roadmaps](../../topics/smart_roadmap/) and begin designing our individual learning plans. The goal is to lay out a concrete plan of study for the next few weeks, one that challenges you to learn new skills while contributing to your team's broader goals.
 
 Once we have a solid plan, we'll flesh out our first weekly "learning" sprint on the team Project Board, as detailed in [GitHubify your Action Plan](../../topics/smart_roadmap/#githubify-your-action-plan).
-
-
-## How to Learn Coding
-
-With our [Smart Roadmaps](../../topics/smart_roadmap/) fleshed out, let's spend a few minutes reviewing *how* to approach our individual technical learning. We'll discuss your own ideas -- what's worked well and not so well in the past -- and talk through [10 Tips for Learning Code](../../topics/ten_tips_for_learning_code/).
-
-
-## Git Overview and Basics
-
-Version control in general and git in partiuclar are widely used by data journalists and news apps teams.
-
-But this tool can be tricky to learn. Today we'll get a big picture sense of why we use git, especially in a team context.
-
-Then we'll dive into the basics of git syntax to set the stage for an assignment designed to help you build a solid grasp of this technology.
-
-* [Team Collaboration with Git](../../topics/team_collab_with_git/)
-* [Assignment 4 - Version Control with Git](../../assignments/4/)
