Add week 4 class notes and assignments

--- a/src/bna/2024/assignments/7.md
+++ b/src/bna/2024/assignments/7.md
@@ -1,10 +1,10 @@
 ---
 layout: layouts/assignments.njk
 title: DOM and Browser Tools
-date: 2023-04-26
+date: 2024-02-05
 number: 7
 tags:
-  - assignments202X
+  - assignments2024
 
 ---
 
