--- a/src/bna/2024/day/7.md
+++ b/src/bna/2024/day/7.md
@@ -1,25 +1,19 @@
 ---
 layout: layouts/class.njk
-date: 2023-04-24
-title: Wireframes Review
+date: 2024-01-29
+title: Design Discussion and Daily Stand-ups
 daynum: 7
-coursedate: "April 24, 2023"
+coursedate: "January 29, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
-## Wireframes Review
+## Design Reading Discussion
 
-Today we'll present the first drafts of our site designs, aka [wireframes][]. This is the first of several design check-ins throughout the quarter.
+We'll kick off class with a dicussion of important design principles
+mentioned in our latest [reading assignment](../../assignments/5/).
 
-Your wireframes should feature the following elements:
+## Daily Stand-ups
 
-- Important page types (home page, child pages, etc)
-- The features each page will have, along with site-wide elements such as navigation
-- How users will interact with your site
-
-> Important: Designs should *clearly* address your team's [user stories](../../topics/beats_and_user_stories/)
-
-
-[wireframes]: https://en.wikipedia.org/wiki/Website_wireframe
+Git and GitHub provide technical solutions to help teams work better. [Daily stand-ups](../../topics/daily_standup/) are a workflow practice that help teams *communicate* better. Today we'll briefly learn how a daily "stand-up", or scrum, can help us fire on all cylinders as a team and practice the technique as a group.  Each team will set up a scrum schedule and begin applying this workflow on a regular basis.
 
