--- a/src/bna/2024/day/8.md
+++ b/src/bna/2024/day/8.md
@@ -1,18 +1,32 @@
 ---
 layout: layouts/class.njk
-date: 2023-04-26
-title: Coding Cockpit and JS Exercise
+date: 2024-01-31
+title: Wireframes Review and Project Milestones
 daynum: 8
-coursedate: "April 26, 2023"
+coursedate: "January 31, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
-## Overview
+## Wireframes Review
 
-Today we'll review how [browser developer tools can serve as a dashboard](../../topics/coding_cockpit/) for gaining visibility into our code. We'll also try to get a better feel for how to use Javascript to *dynamically* modify a web page after it has loaded in the browser (i.e. manipulating the DOM).
+Today we'll present the first drafts of our site designs, aka [wireframes][]. This is the first of several design check-ins throughout the quarter.
 
-## Assignments
+Your wireframes should feature the following elements:
 
-* [Assignment 7 - DOM and Browser Tools](../../assignments/7/)
-* [Assignment 8 - Javascript Tinkering](../../assignments/8/)
+- Important page types (home page, child pages, etc)
+- The features each page will have, along with site-wide elements such as navigation
+- How users will interact with your site
+
+> Important: Designs should *clearly* address your team's [user stories](../../topics/beats_and_user_stories/)
+
+## Project Planning with Milestones
+
+Daily stand-ups, or scrum, enable frequent communication about the status of work during a short period of time known as a "sprint".
+
+But it's also helpful to draft a roadmap of the [milestones](../../topics/milestones/) we plan to accomplish on a longer timeline. Having a series of mid-way markers can help us think through multiple aspects of our work and devise a rough plan for what to build, and when to build it.
+
+Today we'll review how to use GitHub milestones to plan future work and apply the methodology to our team projects.
+
+
+[wireframes]: https://en.wikipedia.org/wiki/Website_wireframe
