--- a/src/bna/2024/assignments/6.md
+++ b/src/bna/2024/assignments/6.md
@@ -1,10 +1,10 @@
 ---
 layout: layouts/assignments.njk
 title: Wireframes - Take 1
-date: 2023-04-19
+date: 2024-01-31
 number: 6
 tags:
-  - assignments202X
+  - assignments2024
 
 ---
 
