--- a/src/bna/2024/day/9.md
+++ b/src/bna/2024/day/9.md
@@ -1,23 +1,18 @@
 ---
 layout: layouts/class.njk
-date: 2023-05-01
-title: Project Planning with Milestones and JS Tinkering
-daynum: 9
-coursedate: "May 1, 2023"
+date: 2023-04-26
+title: Coding Cockpit and JS Exercise
+daynum: 8
+coursedate: "April 26, 2023"
 tags:
   - classnotes202X
 ---
 
-## Project Planning with Milestones
+## Overview
 
-Daily stand-ups, or scrum, enable frequent communication about the status of work during a short period of time known as a "sprint".
+Today we'll review how [browser developer tools can serve as a dashboard](../../topics/coding_cockpit/) for gaining visibility into our code. We'll also try to get a better feel for how to use Javascript to *dynamically* modify a web page after it has loaded in the browser (i.e. manipulating the DOM).
 
-But it's also helpful to draft a roadmap of the [milestones](../../topics/milestones/) we plan to accomplish on a longer timeline. Having a series of mid-way markers can help us think through multiple aspects of our work and devise a rough plan for what to build, and when to build it.
+## Assignments
 
-Today we'll review how to use GitHub milestones to plan future work and apply the methodology to our team projects.
-
-## JS Tinkering
-
-We'll also devote a portion of today's class to any questions you have about the [DOM and Browser Tools](../../assignments/7/) and continue our [Javascript Tinkering (Assignment 8)](../../assignments/8/). Remember, the goal is to pick a Javascript technique that you'd like to learn or master, ideally one that will be useful for your team project. We'll work together to strip away the inessentials so we can focus on gaining a better handle on the core concepts behind the techniques we're exploring.
-
-We'll devote any remaining time to team project work.
+* [Assignment 7 - DOM and Browser Tools](../../assignments/7/)
+* [Assignment 8 - Javascript Tinkering](../../assignments/8/)
