Add weeks 5 and 6

--- a/src/bna/2024/assignments/8.md
+++ b/src/bna/2024/assignments/8.md
@@ -1,10 +1,10 @@
 ---
 layout: layouts/assignments.njk
 title: Javascript Tinkering
-date: 2023-04-26
+date: 2024-02-12
 number: 8
 tags:
-  - assignments202X
+  - assignments2024
 
 ---
 
