--- a/src/bna/2024/day/12.md
+++ b/src/bna/2024/day/12.md
@@ -1,11 +1,11 @@
 ---
 layout: layouts/class.njk
-date: 2023-05-10
+date: 2024-02-14
 title: Group Project Work
 daynum: 12
-coursedate: "May 10, 2023"
+coursedate: "February 14, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
 Today we'll break into groups and focus on pressing forward with our projects.
