--- a/src/bna/2024/day/8.md
+++ b/src/bna/2024/day/8.md
@@ -1,7 +1,7 @@
 ---
 layout: layouts/class.njk
 date: 2024-01-31
-title: Wireframes Review and Project Milestones
+title: Wireframes Review
 daynum: 8
 coursedate: "January 31, 2024"
 tags:
@@ -19,14 +19,6 @@ Your wireframes should feature the following elements:
 - How users will interact with your site
 
 > Important: Designs should *clearly* address your team's [user stories](../../topics/beats_and_user_stories/)
-
-## Project Planning with Milestones
-
-Daily stand-ups, or scrum, enable frequent communication about the status of work during a short period of time known as a "sprint".
-
-But it's also helpful to draft a roadmap of the [milestones](../../topics/milestones/) we plan to accomplish on a longer timeline. Having a series of mid-way markers can help us think through multiple aspects of our work and devise a rough plan for what to build, and when to build it.
-
-Today we'll review how to use GitHub milestones to plan future work and apply the methodology to our team projects.
 
 
 [wireframes]: https://en.wikipedia.org/wiki/Website_wireframe
