--- a/src/bna/2024/day/9.md
+++ b/src/bna/2024/day/9.md
@@ -1,18 +1,17 @@
 ---
 layout: layouts/class.njk
-date: 2023-04-26
+date: 2024-02-05
 title: Coding Cockpit and JS Exercise
-daynum: 8
-coursedate: "April 26, 2023"
+daynum: 9
+coursedate: "February 2, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
 ## Overview
 
 Today we'll review how [browser developer tools can serve as a dashboard](../../topics/coding_cockpit/) for gaining visibility into our code. We'll also try to get a better feel for how to use Javascript to *dynamically* modify a web page after it has loaded in the browser (i.e. manipulating the DOM).
 
-## Assignments
+## Assignment
 
 * [Assignment 7 - DOM and Browser Tools](../../assignments/7/)
-* [Assignment 8 - Javascript Tinkering](../../assignments/8/)
