--- a/src/bna/2024/day/11.md
+++ b/src/bna/2024/day/11.md
@@ -1,12 +1,17 @@
 ---
 layout: layouts/class.njk
-date: 2023-05-08
-title: Group Project Work
+date: 2024-02-12
+title: Application architecture
 daynum: 11
-coursedate: "May 08, 2023"
+coursedate: "Februaruy 12, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
-Today we'll break into groups and focus on pressing forward with our projects.
+Today we'll whiteboard the overall architecture of our sites. This will involve figuring out how the parts of our application, at a high-level, fit together. Topics will include:
+
+- Web services or platforms required to run our applications
+- Data pipelines that feed application features
+- Third-party APIs necessary for our application
+
 
