Add assignments 9 and 10

--- a/src/bna/2024/assignments/9.md
+++ b/src/bna/2024/assignments/9.md
@@ -1,12 +1,12 @@
 ---
 layout: layouts/assignments.njk
-title: Project Design v1
-date: 2022-05-02
-number: 10
+title: Application Architecture
+date: 2024-02-14
+number: 9
 tags:
-  - assignments202X
+  - assignments2024
 
 ---
 
 
-{% include "bna/" + year + "/assignments/design_prezos.md" %}
+{% include "bna/" + year + "/assignments/app-architecture.md" %}
