--- a/src/bna/2024/assignments/10.md
+++ b/src/bna/2024/assignments/10.md
@@ -1,10 +1,10 @@
 ---
 layout: layouts/assignments.njk
 title: Mid-quarter Survey
-date: 2023-05-22
-number: 9
+date: 2024-02-16
+number: 10
 tags:
- - assignments202X
+ - assignments2024
 
 ---
 
