Change Day 12 to Getting on the Web

--- a/src/bna/2024/day/15.md
+++ b/src/bna/2024/day/15.md
@@ -1,13 +1,11 @@
 ---
 layout: layouts/class.njk
 date: 2023-05-22
-title: Getting on the Web
+title: Group Project Work
 daynum: 15
 coursedate: "May 22, 2023"
 tags:
   - classnotes202X
 ---
 
-## Overview
-
-Today, we'll review various ways to [get your projects on the web](../../topics/getting_on_the_web/).
+Today we'll break into groups and focus on pressing forward with our projects.
