--- a/src/bna/2024/day/12.md
+++ b/src/bna/2024/day/12.md
@@ -1,11 +1,13 @@
 ---
 layout: layouts/class.njk
 date: 2024-02-14
-title: Group Project Work
+title: Getting on the Web
 daynum: 12
 coursedate: "February 14, 2024"
 tags:
   - classnotes2024
 ---
 
-Today we'll break into groups and focus on pressing forward with our projects.
+## Overview
+
+Today, we'll review various ways to [get your projects on the web](../../topics/getting_on_the_web/).
