--- a/src/bna/2024/day/13.md
+++ b/src/bna/2024/day/13.md
@@ -1,11 +1,11 @@
 ---
 layout: layouts/class.njk
-date: 2023-05-15
-title: Group Project Work
+date: 2024-02-19
+title: No Class - President's Day
 daynum: 13
-coursedate: "May 15, 2023"
+coursedate: "February 19, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
-Today we'll break into groups and focus on pressing forward with our projects.
+It's President's Day so no class. Enjoy the day off!
