--- a/src/bna/2024/day/14.md
+++ b/src/bna/2024/day/14.md
@@ -1,15 +1,15 @@
 ---
 layout: layouts/class.njk
-date: 2023-05-17
-title: Managing Secrets and Group Work
+date: 2024-02-21
+title: Revisiting SMART Roadmap and Group Project Work
 daynum: 14
-coursedate: "May 17, 2022"
+coursedate: "February 21, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
-## Overview
+We'll begin class by revisiting and updating our SMART Roadmaps as a
+group. The goal will be to dial in our plans for the remainder of the
+quarter.
 
-Today we'll review strategies for handling sensitive information such as API keys and other secrets in our applications and code. We'll generally focus on the use of environment variables to avoid "hard-coding" secrets in our code or exposing such information in our live applications.
-
-We'll then break out into groups for more project work.
+We'll then devote the remaining time to team project work and consults.
