Add days 15-20 for 2024

--- a/src/bna/2024/day/15.md
+++ b/src/bna/2024/day/15.md
@@ -1,11 +1,18 @@
 ---
 layout: layouts/class.njk
-date: 2023-05-22
-title: Group Project Work
+date: 2024-02-26
+title: API-Backed Data Viz - Part 1
 daynum: 15
-coursedate: "May 22, 2023"
+coursedate: "February 26, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
-Today we'll break into groups and focus on pressing forward with our projects.
+Today we'll begin preparing to work on a basic data visualization of unemployment data. The goal of the exercise is to introduce you to cloud services that can help you easily add dynamic elements to an interactive graphics on the web. Along the way, we'll learn a bit about the [Vega-Lite](https://vega.github.io/vega-lite/) data visualization library.
+
+In particular, we'll review a few key services on the Google Cloud Platform:
+
+- [Cloud Functions](https://cloud.google.com/functions) (to handle web requests)
+- [BigQuery](https://cloud.google.com/bigquery/docs) (to store and query unemployment data)
+
+> All the code for this exercise is here: https://github.com/zstumgoren/bls-api
