--- a/src/bna/2024/day/18.md
+++ b/src/bna/2024/day/18.md
@@ -1,11 +1,13 @@
 ---
 layout: layouts/class.njk
-date: 2023-05-31
-title: Group project work
+date: 2024-03-06
+title: No class - NICAR Conference
 daynum: 18
-coursedate: "May 31, 2023"
+coursedate: "February 05, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
-Today we'll break into groups and focus on pressing forward with our projects.
+There will be no class today since a number of us will be attending the annual NICAR conference.
+
+For the folks not attending, please continue plugging away on your team projects.
