--- a/src/bna/2024/day/19.md
+++ b/src/bna/2024/day/19.md
@@ -1,11 +1,21 @@
 ---
 layout: layouts/class.njk
-date: 2023-06-05
-title: Group project work
+date: 2024-03-11
+title: Up your code game with GitHub Copilot
 daynum: 19
-coursedate: "June 5, 2023"
+coursedate: "March 11, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
-Today we'll break into groups and focus on pressing forward with our projects.
+You all have spent a quarter working hard to master a variety of new programming languages/frameworks for the web, and laying a solid foundation in web fundamentals.
+
+You're now ready for [GitHub Copilot](https://github.com/features/copilot), a generative AI coding assistant that can dramatically streamline your work and learning.
+
+Copilot offers a variety of features, including the ability to generate code, debug, and explain complicated code that you may not understand. One of the nicest features of Copilot is that it blends directly into your coding tool of choice (e.g. VS Code), so you don't have to copy code back-and-forth between, say, ChatGPT, and your code editor.
+
+It's important to note that these tools can't do everything for you. They're most useful when you have a basic understanding of a given language (e.g. Javascript or Python). It's quite common for generative AI (Copilot or otherwise) to provide out-of-date, non-idiomatic, and even incorrect code. If you don't understand the output, then you won't know whether the code is helpful or accurate. What's more, if you don't have a grasp of *what questions to ask*, the tool won't be nearly as helpful and may be downright confusing.
+
+Okay, with the caveats out of the way, let's start Copiloting!
+
+> Please make sure to have signed up for the [GitHub Student Developer Pack](https://education.github.com/pack), which grants you free access to Copilot.
