--- a/src/bna/2024/day/20.md
+++ b/src/bna/2024/day/20.md
@@ -1,11 +1,11 @@
 ---
 layout: layouts/class.njk
-date: 2023-06-07
+date: 2024-03-13
 title: Final project demos and course retrospective
 daynum: 20
-coursedate: "June 7, 2023"
+coursedate: "March 13, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
 ## Final presentations
@@ -29,4 +29,3 @@ submit the GitHub URL for your project.
 ## Course retrospective
 
 If time allows, we'll wrap up by reflecting on what you all have accomplished this quarter and how to continue learning about storytelling on the web.
-
