--- a/src/bna/2024/day/17.md
+++ b/src/bna/2024/day/17.md
@@ -1,12 +1,21 @@
 ---
 layout: layouts/class.njk
-date: 2023-05-29
-title: Memorial Day - No class
+date: 2024-03-04
+title: API-Backed Data Viz - Part 3
 daynum: 17
-coursedate: "May 29, 2023"
+coursedate: "March 4, 2024"
 tags:
-  - classnotes202X
+  - classnotes2024
 ---
 
-Class is canceled for Memorial Day.
+In [part 2](../../day/16) of this exercise, we learned how to work with [BigQuery][] to query unemployment data by county and state.
+
+Today we'll complete the process by crafting a [Cloud Function][] API that can dynamically query BigQuery for unemployment stats based on user input from our Vega-Lite chart (via web form submission).
+
+We'll then spend the remainder of class brainstorming and implementing [ideas to improve the chart](https://github.com/zstumgoren/bls-api/blob/main/docs/exercises.md) (which is admittedly quite basic).
+
+[BigQuery]: https://cloud.google.com/bigquery/docs
+[Cloud Function]: https://cloud.google.com/functions
+
+> All the code for this exercise is here: https://github.com/zstumgoren/bls-api
 
