Update days 1 and 2 for 2025

--- a/src/bna/2025/day/1.md
+++ b/src/bna/2025/day/1.md
@@ -12,7 +12,8 @@ tags:
 * [News Apps Overview](../../topics/news_apps_overview/)
 * [Syllabus]({{ syllabus }}) overview and questions
 * [How to succeed in this course](../../topics/how_to_succeed/)
-* Form teams and start brainstorming possible [beats and project ideas](../../topics/beats_and_user_stories/)
+* Start brainstorming possible [beats and project ideas](../../topics/beats_and_user_stories/)
+* Fill out the student background survey (see Canvas assignment)
 * [Assignment 1](../../assignments/1/)
 
 [Course Overview slides]: https://docs.google.com/presentation/d/1do22QSsyV4pb7BDUnkYQOQpziUrcvC_Q4-oyToq2oyk/edit?usp=sharing
