--- a/src/bna/2025/day/2.md
+++ b/src/bna/2025/day/2.md
@@ -9,12 +9,11 @@ tags:
 ---
 
 * Favorite news app presentations
-* Team bootstrap:
-  * Pick a team name!
-  * Set up a GitHub project repo and add collaborators
-  * Setting up and using GitHub project boards
+* Form into teams!
+* Project beat and user stories brainstorm
+  * [Project Beats and User Stories](../../topics/beats_and_user_stories/)
+  * [Assignment 2 - Project Beats and User Stories](../../assignments/2/)
+* Team bootstrap on GitHub
   * Create a team slack channel
-* Presentations on project beat ideas ([Assignment 1](../../assignments/1/))
-* Overview of [Project Beats and User stories](../../topics/beats_and_user_stories/). From beats to user stories to software features.
-* If time allows we'll do a preview of the [SMART Roadmap](../../topics/smart_roadmap/), a strategy for crafting individual learning goals that align with and help drive forward our team projects. At the outset, we'll focus primarly on the types of technical skills we hope to learn this quarter.  As our project ideas come into sharper focus, we'll revisit and refine our SMART goals to ensure our inidividual learning plans are aligned with the goals of our team.
-* [Assignment 2 - Project Beats and User Stories](../../assignments/2/)
+  * Set up a GitHub project repo and add collaborators
+  * Create GitHub project boards
