--- a/src/bna/2025/day/3.md
+++ b/src/bna/2025/day/3.md
@@ -1,12 +1,30 @@
 ---
 layout: layouts/class.njk
-date: 2024-01-15
-title: MLK Day - No Class
+date: 2025-01-13
+title: User Stories, Project Planning and SMART Roadmaps
 daynum: 3
-coursedate: "January 15, 2024"
+coursedate: "January 13, 2025"
 tags:
-  - classnotes2024
+  - classnotes2025
 ---
 
+## Team project presentations
 
-Class is canceled today for Martin Luther King Day.
+Today, each team will present their project beats, user stories and initial ideas for software. This is an opportunity to refine ideas and user stories based on feedback from classmates. In addition, it's a chance for you to begin articulating the role each team member will play on the project.
+
+Each team should present on the following:
+
+* Project beat(s)
+* User stories
+* General software ideas to address the needs identified in user stories
+* What role each team member plans to play
+
+## Project Planning with GitHub Project Boards
+
+We'll learn how to set up and use GitHub Project Boards for team planning. This will help us track progress on our projects, assign tasks, and keep everyone on the same page.
+
+## SMART Roadmap Overview
+
+We'll review [SMART Roadmaps](../../topics/smart_roadmap/) and begin designing our individual learning plans. The goal is to lay out a concrete plan of study for the next few weeks, one that challenges you to learn new skills while contributing to your team's broader goals.
+
+Once we have a solid plan, we'll flesh out our first weekly "learning" sprint on the team Project Board, as detailed in [GitHubify your Action Plan](../../topics/smart_roadmap/#githubify-your-action-plan).
