--- a/src/bna/2025/day/4.md
+++ b/src/bna/2025/day/4.md
@@ -1,27 +1,48 @@
 ---
 layout: layouts/class.njk
-date: 2024-01-17
-title: Project Presentations and SMART Roadmap Overview
+date: 2025-01-15
+title:  SMART feedback, Scrum and Wireframes
 daynum: 4
-coursedate: "January 17, 2024"
+coursedate: "January 15, 2025"
 tags:
-  - classnotes2024
+  - classnotes2025
 ---
 
 
-## Team project presentations
+## SMART Roadmap Review
 
-Today, each team will present their project beats, user stories and initial ideas for software. This is an opportunity to refine ideas and user stories based on feedback from classmates. In addition, it's a chance for you to begin articulating the role each team member will play on the project.
+Let's review [SMART Roadmaps](../../topics/smart_roadmap/) and finalize the plan for the next few weeks of study.
 
-Each team should present on the following:
+If you haven't already done so, you should add a GitHub Issue to your project board detailing your learning task for the next week.
 
-* Project beat(s)
-* User stories
-* General software ideas to address the needs identified in user stories
-* What role each team member plans to play
+> See [GitHubify your Action Plan](../../topics/smart_roadmap/#githubify-your-action-plan) for details.
 
-## SMART Roadmap Overview
+## Daily "Standup" (aka Scrum)
 
-If time allows, we'll review [SMART Roadmaps](../../topics/smart_roadmap/) and begin designing our individual learning plans. The goal is to lay out a concrete plan of study for the next few weeks, one that challenges you to learn new skills while contributing to your team's broader goals.
+The [Daily Standup][../../topics/daily_standup/], or scrum, is a key strategy for achieving tight feedback loops when building products, software, etc. When *used well*, it can help teams:
 
-Once we have a solid plan, we'll flesh out our first weekly "learning" sprint on the team Project Board, as detailed in [GitHubify your Action Plan](../../topics/smart_roadmap/#githubify-your-action-plan).
+- stay in sync
+- avoid wasted efforts
+- identify challenges (and solutions) early
+
+We'll review the basics of the Daily Standup and how it can help your team stay on track.
+
+## Visual brainstorm - wireframe edition
+
+We'll introduce the concept of wireframes and how they can help visualize your software ideas. 
+
+Wireframing should be a fast and iterative process that let's you clarify the broad strokes of your site design and identify important questions and potential challenges.
+
+Some key questions to keep in mind along the way:
+
+- **Do you have an overall site "architecture"?** *If not, sketch one out
+(e.g. multi-page, single-page, etc.)*
+- **Are features tied to specific user stories?** *If not, circle back to your
+user stories and update them.*
+- **Have you considered the user's journey through the site, including how a feature or page section changes in response to a user interaction?** *It's critical to annotate wireframes with details on UI/UX and often requires more than one version of a wireframe for a given page or page section!*
+- **Is data available to support the feature?** *If you're unsure, keep the
+feature for now but add a GitHub issue to research the data -- and
+verify ASAP!*
+
+> IMPORTANT: Wireframes are not meant to be perfect. They are a tool to help you think through your design. They should be quick and dirty, not polished and perfect.
+
