Add week 3 resources

--- a/src/bna/2025/day/5.md
+++ b/src/bna/2025/day/5.md
@@ -1,34 +1,13 @@
 ---
 layout: layouts/class.njk
-date: 2024-01-22
-title: SMART Roadmap, Pro Tips for Learning Code & Version Control with Git
+date: 2025-01-20
+title: MLK Day - no class
 daynum: 5
-coursedate: "January 22, 2024"
+coursedate: "January 20, 2025"
 tags:
-  - classnotes2024
+  - classnotes2025
 ---
 
+No class today in observance of Martin Luther King Jr. Day. 
 
-## SMART Roadmap feedback
-
-We'll kick off class by presenting the first drafts of our [Smart Roadmaps](../../topics/smart_roadmap/). This is a chance to
-get some initial feedback and lay out a concrete plan of study for the next few weeks, one that challenges you to learn new skills while contributing to your team's broader goals.
-
-Once we have a solid plan, we'll flesh out our first weekly "learning" sprint on the team Project Board, as detailed in [GitHubify your Action Plan](../../topics/smart_roadmap/#githubify-your-action-plan).
-
-
-## How to Learn Coding
-
-With our [Smart Roadmaps](../../topics/smart_roadmap/) fleshed out, let's spend a few minutes reviewing *how* to approach our individual technical learning. We'll discuss your own ideas -- what's worked well and not so well in the past -- and talk through [10 Tips for Learning Code](../../topics/ten_tips_for_learning_code/).
-
-
-## Git Overview and Basics
-
-Version control in general and git in partiuclar are widely used by data journalists and news apps teams.
-
-But this tool can be tricky to learn. Today we'll get a big picture sense of why we use git, especially in a team context.
-
-Then we'll dive into the basics of git syntax to set the stage for an assignment designed to help you build a solid grasp of this technology.
-
-* [Team Collaboration with Git](../../topics/team_collab_with_git/)
-* [Assignment 4 - Version Control with Git](../../assignments/4/)
+Please continue working on your individual learning tasks and team project wireframes.
