--- a/src/bna/2025/day/6.md
+++ b/src/bna/2025/day/6.md
@@ -1,34 +1,30 @@
 ---
 layout: layouts/class.njk
-date: 2024-01-24
-title: Git Finale and Project Design - Take 1
+date: 2025-01-22
+title: Wireframes, GH Milestones, Version Control with Git
 daynum: 6
-coursedate: "January 24, 2024"
+coursedate: "January 22, 2025"
 tags:
-  - classnotes2024
+  - classnotes2025
 ---
 
-## Git Finale
+## Wireframes feedback
 
-Today we'll take some time to review any questions from [Assignment 4 - Version Control with Git](../../assignments/4/).
-
-We'll step back to better understand the recommended approaches for _how
-to work_ with GitHub, both as a team as well as a sensible individual daily workflow.
-
-We'll then wrap up our introduction to [team Collaboration with Git](../../topics/team_collab_with_git/) by diving into branches, merging code, and various snags you'll inevitably encounter when using version control (yes, I mean merge conflicts, among other annoyances).
+We'll start class today with a review of your [wireframes](../../assignments/wireframes/).
 
 
-## Project Design - Take 1
+## GitHub Milestones
 
-We'll also take some time to review basic design principles, and begin [wireframing][] our projects. This is the first of several design check-ins we'll be conducting throughout the quarter.
-
-The goal is to begin sketching out the overall layout of your websites, with a focus on:
-
-- Identifying important page types (home page, child pages, etc)
-- The features each page will have, along with site-wide elements such as navigation
-- How users will interact with your site
-
-> Important: Designs should *clearly* address your team's [user stories](../../topics/beats_and_user_stories/)
+We'll briefly review the concept of [GitHub Milestones](https://docs.github.com/en/issues/using-labels-and-milestones-to-track-work/about-milestones) and how they can help you plan and track your project work.
 
 
-[wireframing]: https://en.wikipedia.org/wiki/Website_wireframe
+## Git Overview and Basics
+
+Version control in general and git in partiuclar are widely used by data journalists and news apps teams.
+
+But this tool can be tricky to learn. Today we'll get a big picture sense of why we use git, especially in a team context.
+
+Then we'll dive into the basics of git syntax to set the stage for an assignment designed to help you build a solid grasp of this technology.
+
+* [Team Collaboration with Git](../../topics/team_collab_with_git/)
+* [Assignment: Version Control with Git](../../assignments/git/)
