--- a/src/bna/2025/day/7.md
+++ b/src/bna/2025/day/7.md
@@ -1,19 +1,19 @@
 ---
 layout: layouts/class.njk
-date: 2024-01-29
-title: Design Discussion and Daily Stand-ups
+date: 2025-01-27
+title: Git Continued
 daynum: 7
-coursedate: "January 29, 2024"
+coursedate: "January 27, 2025"
 tags:
-  - classnotes2024
+  - classnotes2025
 ---
 
-## Design Reading Discussion
+Today we'll continue our git and GitHub journey through some hands-on
+work intended to:
 
-We'll kick off class with a dicussion of important design principles
-mentioned in our latest [reading assignment](../../assignments/5/).
+- Build "muscle memory" with git command-line commands
+- Gain comfort with branches, pull requests, and merges
+- Help visualize the lifecycle of the git/GitHub workflow in a team
+context
 
-## Daily Stand-ups
-
-Git and GitHub provide technical solutions to help teams work better. [Daily stand-ups](../../topics/daily_standup/) are a workflow practice that help teams *communicate* better. Today we'll briefly learn how a daily "stand-up", or scrum, can help us fire on all cylinders as a team and practice the technique as a group.  Each team will set up a scrum schedule and begin applying this workflow on a regular basis.
-
+Check out [Team Collaboration with Git](../../topics/team_collab_with_git/) for more on this topic.
