--- a/src/bna/2025/day/8.md
+++ b/src/bna/2025/day/8.md
@@ -1,24 +1,19 @@
 ---
 layout: layouts/class.njk
-date: 2024-01-31
-title: Wireframes Review
+date: 2025-01-29
+title: Browser Tools - The Coding Cockpit
 daynum: 8
-coursedate: "January 31, 2024"
+coursedate: "January 29, 2029"
 tags:
-  - classnotes2024
+  - classnotes2025
 ---
 
-## Wireframes Review
+## Overview
 
-Today we'll present the first drafts of our site designs, aka [wireframes][]. This is the first of several design check-ins throughout the quarter.
+Today we'll review how [browser developer tools can serve as a dashboard](../../topics/coding_cockpit/) for gaining visibility into our code. We'll also try to get a better feel for how to use Javascript to *dynamically* modify a web page after it has loaded in the browser (i.e. manipulating the DOM).
 
-Your wireframes should feature the following elements:
+## Assignment
 
-- Important page types (home page, child pages, etc)
-- The features each page will have, along with site-wide elements such as navigation
-- How users will interact with your site
+* [Assignment - DOM and Browser
+Tools](../../assignments/dom-and-browser-tools/)
 
-> Important: Designs should *clearly* address your team's [user stories](../../topics/beats_and_user_stories/)
-
-
-[wireframes]: https://en.wikipedia.org/wiki/Website_wireframe
