Add week 5 resources

--- a/src/bna/2025/day/9.md
+++ b/src/bna/2025/day/9.md
@@ -1,17 +1,26 @@
 ---
 layout: layouts/class.njk
-date: 2024-02-05
-title: Coding Cockpit and JS Exercise
+date: 2025-02-03
+title: Project Planning with Milestones and JS Tinkering
 daynum: 9
-coursedate: "February 2, 2024"
+coursedate: "February 3, 2025"
 tags:
-  - classnotes2024
+  - classnotes2025
 ---
 
-## Overview
+## Project Planning with Milestones
 
-Today we'll review how [browser developer tools can serve as a dashboard](../../topics/coding_cockpit/) for gaining visibility into our code. We'll also try to get a better feel for how to use Javascript to *dynamically* modify a web page after it has loaded in the browser (i.e. manipulating the DOM).
+Daily stand-ups, or scrum, enable frequent communication about the status of work during a short period of time known as a "sprint".
 
-## Assignment
+But it's also helpful to draft a roadmap of the [milestones](../../topics/milestones/) we plan to accomplish on a longer timeline. Having a series of mid-way markers can help us think through multiple aspects of our work and devise a rough plan for what to build, and when to build it.
 
-* [Assignment 7 - DOM and Browser Tools](../../assignments/7/)
+Today we'll review how to use GitHub milestones to plan future work and apply the methodology to our team projects.
+
+## 10 Tips for Learning Code
+
+Learning how to code can be a daunting challenge. We'll cover [10
+Tips for Learning Code](../../topics/ten_tips_for_learning_code) to help expand your repertoire of learning strategies.
+
+## JS Tinkering
+
+We'll also devote a portion of today's class to any questions you have about the [DOM and Browser Tools](../../assignments/dom-and-browser-tools/) and begin our [Javascript Tinkering](../../assignments/js-tinkering/) assignment. The goal is to pick a Javascript technique that you'd like to learn or master, ideally one that will be useful for your team project. We'll work together to strip away the inessentials so we can focus on gaining a better handle on the core concepts behind the techniques we're exploring.
