--- a/src/bna/2025/day/10.md
+++ b/src/bna/2025/day/10.md
@@ -1,23 +1,16 @@
 ---
 layout: layouts/class.njk
-date: 2024-02-07
-title: Project Planning with Milestones and JS Tinkering
+date: 2025-02-05
+title: JS Tinkering continued and Project Work
 daynum: 10
-coursedate: "February 7, 2024"
+coursedate: "February 5, 2025"
 tags:
-  - classnotes2024
+  - classnotes2025
 ---
 
-## Project Planning with Milestones
+We'll continue working the [Javascript Tinkering](../../assignments/js-tinkering/) assignment.
 
-Daily stand-ups, or scrum, enable frequent communication about the status of work during a short period of time known as a "sprint".
+We'll also devote time to:
 
-But it's also helpful to draft a roadmap of the [milestones](../../topics/milestones/) we plan to accomplish on a longer timeline. Having a series of mid-way markers can help us think through multiple aspects of our work and devise a rough plan for what to build, and when to build it.
-
-Today we'll review how to use GitHub milestones to plan future work and apply the methodology to our team projects.
-
-## JS Tinkering
-
-We'll also devote a portion of today's class to any questions you have about the [DOM and Browser Tools](../../assignments/7/) and begin our [Javascript Tinkering (Assignment 8)](../../assignments/8/). Remember, the goal is to pick a Javascript technique that you'd like to learn or master, ideally one that will be useful for your team project. We'll work together to strip away the inessentials so we can focus on gaining a better handle on the core concepts behind the techniques we're exploring.
-
-We'll devote any remaining time to team project work.
+- Project check-ins and work
+- 1-on-1 check-ins on learning tasks
