--- a/src/bna/2026/day/6.md
+++ b/src/bna/2026/day/6.md
@@ -10,7 +10,7 @@ tags:
 
 ## SMART Roadmap review
 
-We'll begin class today with a quick review of your [SMART Roadmaps](../../assignments/smart_roadmap/).
+We'll begin class today with a quick review of your [SMART Roadmaps](../../topics/smart_roadmap/).
 
 ## Wireframes feedback
 
