revise day 8 2026 and add days 9 and 10

--- a/src/bna/2026/day/8.md
+++ b/src/bna/2026/day/8.md
@@ -1,19 +1,13 @@
 ---
 layout: layouts/class.njk
 date: 2026-01-28
-title: Browser Tools - The Coding Cockpit
+title: Git continued and project check-ins
 daynum: 8
 coursedate: "January 28, 2026"
 tags:
   - classnotes2026
 ---
 
-## Overview
+## Git continued
 
-Today we'll review how [browser developer tools can serve as a dashboard](../../topics/coding_cockpit/) for gaining visibility into our code. We'll also try to get a better feel for how to use Javascript to *dynamically* modify a web page after it has loaded in the browser (i.e. manipulating the DOM).
-
-## Assignment
-
-* [Assignment - DOM and Browser
-Tools](../../assignments/dom-and-browser-tools/)
-
+Today we'll continue our exploration of Git by reviewing branching and merging. We'll also cover how to resolve merge conflicts when they arise.
